# DealIQ

./: .env.example  .gitattributes  .gitignore  Cadrage AMOA pour une plateforme privée de qualification, matching et deal execution entre PME et in.docx  Cahier_des_Charges_DealIQ_v1.2.docx  Cahier_des_Charges_DealIQ_v1.2.md  Cahier_des_Charges_Plateforme_Dealflow_PME.docx  Cahier_des_Charges_Plateforme_Dealflow_PME.md  Cahier_des_Charges_Plateforme_Dealflow_PME_v1.1.docx  Prompt_UX_UI_DealIQ_aligne_CDC.md  README.md  Revue_critique_plateforme_dealflow_PE.md  Spec Deal IQ.docx  charte-DealIQ.md  docker-compose.yml  run-backend.ps1  run-frontend.ps1
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  06071a6cba37_add_scoring_configs.py  0679fca62714_initial_schema.py  (+9 more)
backend/app/: config.py  database.py  main.py
backend/scripts/: sync_sqlite_dev.py
backend/tests/: conftest.py  test_auth.py  test_cockpit.py  test_companies.py  test_completeness.py  test_csv.py  test_dataroom.py  test_dd.py  test_deals.py  test_documents.py  test_email.py  test_email_verification.py  test_enrichment.py  test_esg.py  test_hardening.py  test_health.py  test_ingest.py  test_investors.py  test_kyc.py  test_mandates.py  test_meta.py  test_mfa.py  test_missions.py  test_notifications.py  test_onboarding.py  test_parcours.py  test_pdf.py  test_programs.py  test_qa.py  test_rbac_audit.py  test_scoring.py  test_scoring_config.py  test_storage.py  test_tasks.py  test_teasers.py
frontend/: index.html  (+2 more)
(+205 files in other folders)
